fix: updated api endpoints, add object jar api to swagger doc
