# internal/app/server.go
@@ -14,29 +14,36 @@ import (
 
 func SetHandler() *http.ServeMux {
 	mux := http.NewServeMux()
+
+	// Swagger routes
 	SetSwagger(mux)
 
+	// DAL and services
 	bucketDal := dal.NewBucketXMLRepo()
 	objectDal := dal.NewObjectCSVRepo()
 
 	objectServ := service.NewObjectService(*objectDal, bucketDal)
 	bucketServ := service.NewBucketService(*bucketDal)
 
+	// Handlers
 	objectHandler := handlers.NewObjectHandler(objectServ)
 	bucketHandler := handlers.NewBucketHandler(bucketServ)
 	healthHandler := handlers.NewHealthHandler()
 
-	mux.HandleFunc("GET /PING", healthHandler.Ping) // Healthcheck
+	// Healthcheck
+	mux.HandleFunc("GET /ping", healthHandler.Ping)
 
-	mux.HandleFunc("GET /", bucketHandler.BucketListsHandler)                 // Bucket list
-	mux.HandleFunc("PUT /{BucketName}", bucketHandler.CreateBucketHandler)    // Create bucket
-	mux.HandleFunc("DELETE /{BucketName}", bucketHandler.DeleteBucketHandler) // Delete bucket
+	// Bucket routes
+	mux.HandleFunc("GET /buckets", bucketHandler.BucketListsHandler)
+	mux.HandleFunc("PUT /buckets/{BucketName}", bucketHandler.CreateBucketHandler)
+	mux.HandleFunc("DELETE /buckets/{BucketName}", bucketHandler.DeleteBucketHandler)
 
-	mux.HandleFunc("PUT /jar/{BucketName}", objectHandler.ObjectJarHandler)        // Upload an object jar
-	mux.HandleFunc("GET /{BucketName}", objectHandler.GetObjectList)               // Get object list in bucket
-	mux.HandleFunc("GET /{BucketName}/{ObjectKey}", objectHandler.RetrieveObject)  // Retrieve an object
-	mux.HandleFunc("PUT /{BucketName}/{ObjectKey}", objectHandler.UpdateObject)    // Upload an object
-	mux.HandleFunc("DELETE /{BucketName}/{ObjectKey}", objectHandler.DeleteObject) // Delete an object
+	// Object routes
+	mux.HandleFunc("GET /objects/{BucketName}", objectHandler.GetObjectList)
+	mux.HandleFunc("PUT /objects/{BucketName}/jar", objectHandler.ObjectJarHandler)
+	mux.HandleFunc("PUT /objects/{BucketName}/{ObjectKey}", objectHandler.UpdateObject)
+	mux.HandleFunc("GET /objects/{BucketName}/{ObjectKey}", objectHandler.RetrieveObject)
+	mux.HandleFunc("DELETE /objects/{BucketName}/{ObjectKey}", objectHandler.DeleteObject)
 
 	return mux
 }
@@ -47,15 +54,17 @@ func SetSwagger(mux *http.ServeMux) {
 		log.Fatal("Failed to read swagger file: ", err)
 	}
 
-	mux.HandleFunc("GET /api/bro/docs/swagger/", httpswagger.Handler(
-		httpswagger.URL("/docs/swagger.json"),
+	// Swagger UI
+	mux.HandleFunc("/docs/", httpswagger.Handler(
+		httpswagger.URL("/swagger.json"),
 	))
 
-	mux.HandleFunc("GET  /docs/swagger.json", func(writer http.ResponseWriter, request *http.Request) {
-		writer.Header().Set("Content-Type", "application/json")
-		if _, err := writer.Write(swaggerBytes); err != nil {
-			slog.Error("Failed to send swagger file: ", "error", err)
-			writer.WriteHeader(http.StatusInternalServerError)
+	// Swagger JSON
+	mux.HandleFunc("/swagger.json", func(w http.ResponseWriter, r *http.Request) {
+		w.Header().Set("Content-Type", "application/openapi+json")
+		if _, err := w.Write(swaggerBytes); err != nil {
+			slog.Error("Failed to send swagger file", "error", err)
+			w.WriteHeader(http.StatusInternalServerError)
 		}
 	})
 }
